Prevent horizontal scrollbar in #root

--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -9,6 +9,7 @@
 #root
     height: 100vh
     width: 100vw
+    overflow-x: hidden
 
 main
     min-height: 100vh
